# sqlviz

./: README.md  pyproject.toml
examples/: EXPECTED_OUTPUT.md  example1.sql  example2.sql  example3.sql  generate_sample.py  visual_description.md
sqlviz/: __init__.py  app.py  errors.py  model.py  parser.py  renderer.py
tests/: test_integration.py  test_model.py  test_parser.py  test_renderer.py
